--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta content='' name='description'/>
+<meta content='true' name='MSSmartTagsPreventParsing'/>
+<meta content='index, follow' name='robots'/>
+<meta content='CodeIgniter Twitter Bootstrap Library, Twitter Bootstrap CodeIgniter Library, CodeIgniterStrap, CodeIgniterStrap Library, CodeIgniter TWB, Twitter Bootstrap 3' name='keywords'/>
+<meta content='http://didanurwanda.github.io/CodeIgniterStrap ' name='subject'/>
+<meta content='CodeIgniter Twitter Bootstrap Library, Twitter Bootstrap CodeIgniter Library, CodeIgniterStrap, CodeIgniterStrap Library, CodeIgniter TWB, Twitter Bootstrap 3' name='Abstract'/>
+<meta content='Dida Nurwanda' name='copyright'/>
+<meta content='Dida Nurwanda' name='author'/>
+<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+<!--[if ie]><meta content='true' name='MSSmartTagsPreventParsing'/><![endif]-->
+<meta content='mXMggdBDKBNDnIDXRsUlMAoUuYS1K52lYLa5XFx_1EE' name='google-site-verification'/>
+<meta content='694453fc6eb30e66' name='y_key'/>
+<meta content='Dida Nurwanda' name='design by'/>
+<meta content='Aeiwi,Alexa,AllTheWeb,AltaVista,AOL Netfind,Anzwers,Canada,DirectHit,EuroSeek,Excite,Overture,Go,Google,Hotbot.InfoMak,Kanoodle,Lycos,MasterSite,National Directory,Norther Light,SearchIt,SimpleSearch,WebsMostLinked,WebTop,What-U-Seek,AOL,Yahoo,WebCrawler,Infoseek,Magellan,LookSmart,CNET, Googlebot' name='search engines'/>
+<meta content='General' name='Rating'/>
+<meta content='Index, Follow' name='Robots'/>
+<meta content='never' name='expires'/>
+<meta content='1 days' name='revisit'/>
+<meta content='1 Days' name='Revisit-after'/>
+<meta content='ID' name='language'/>
+<meta content='ID' name='geo.country'/>
+<meta content='Indonesia' name='geo.placename'/>
+<meta content='global' name='distribution'/>
+<meta content='blogger' name='generator'/>
+<meta content='global' name='target'/>
+<meta content='index,follow,snipet' name='googlebot'/>
+<meta content='follow, all' name='Googlebot-Image'/>
+<meta content='follow, all' name='Scooter'/>
+<meta content='follow, all' name='msnbot'/>
+<meta content='follow, all' name='alexabot'/>
+<meta content='follow, all' name='Slurp'/>
+<meta content='follow, all' name='ZyBorg'/>
+<meta content='ALL' name='SPIDERS'/>
+<meta content='ALL' name='WEBCRAWLERS'/>
+<meta content='all' name='audience'/>
+<meta content='translate' name='google'/>
+<meta content='http://didanurwanda.blogspot.com/' name='Identifier-URL'/>
+<meta content='no-cache' http-equiv='Cache-Control'/>
+<meta content='-5;120' name='geo.position'/>
 
 <title>CodeIgniterStrap</title>
 
