--- a/started.html
+++ b/started.html
@@ -101,7 +101,9 @@
 	
 	
 <a class="btn btn-primary" href="https://github.com/didanurwanda/CodeIgniterStrap/archive/v1.0.zip">Download CodeIgniterStrap</a> 
-<a class="btn btn-success" href="https://github.com/didanurwanda/CodeIgniterStrap/archive/gh-pages.zip">Download Documentation</a> <br />
+<a class="btn btn-success" href="https://github.com/didanurwanda/CodeIgniterStrap/archive/gh-pages.zip">Download Documentation</a> 
+<br />
+<br />
 <a class="btn btn-warning" href="https://github.com/didanurwanda/CodeIgniterStrap/archive/example.zip">Download Examples</a> 
 <a class="btn btn-info" href="http://www.getbootstrap.com">Download Twitter Bootstrap</a>  
   </div>
